--- a/application/src/views/accueil.ejs
+++ b/application/src/views/accueil.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>UNESCOOBYDOO</title>
   </head>
   <body>
-    <h1>vous etes connecté en tant que <%= name %> !</h1>
+    <%- include('header') %>
+    <div class="container"><%= body %></div>
+    <%- include('footer') %>
   </body>
 </html>
