--- a/application/src/views/footer.ejs
+++ b/application/src/views/footer.ejs
@@ -1,1 +1,13 @@
-<footer>UNESCO Footer</footer>
+<footer>
+  <div id="1">Tout droit réservé © 2025 ACD Motorsport</div>
+  <div id="2">
+    <a href="/src/views/accueil">Accueil</a>
+    <a href="/src/views/login">Login</a>
+    <a href="">Recherche</a>
+  </div>
+  <div id="3">
+    <a href="https://x.com"></a>
+    <a href="https://youtub.com"></a>
+    <a></a>
+  </div>
+</footer>
