--- a/application/src/views/accueil.ejs
+++ b/application/src/views/accueil.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
-  </head>
+<html>
   <body>
-    <h1>vous etes connecté en tant que <%= name %> !</h1>
+    Hello <%= foo %>
   </body>
 </html>
