--- a/application/src/views/header.ejs
+++ b/application/src/views/header.ejs
@@ -1,1 +1,11 @@
-<header>UNESCO header</header>
+<header>UNESCO header
+<div class="logo"><img src="../public/images/header/logo-ACD.png" alt="logo-ACD" /></div>
+<div class="search">
+  <form action="#">
+      <input type="text" placeholder="Search Courses"
+             name="search">
+</div>
+<div class="account">
+  <button><a href="#"><img src="" alt="Login"></a></button>
+  <button><a href="#"><img src="" alt="Sign Up"></a><button>
+</header>
