page de login nouveau design(card),addition du formulaire registration dans la fonctionnalité de cette carte ; responsive design (Header, footer ,book(login-register)
page de login nouveau design(card),addition du formulaire registration dans la fonctionnalité de cette carte ; responsive design (Header, footer ,book(login-register)

--- a/frontend/unesco/src/assets/base.css
+++ b/frontend/unesco/src/assets/base.css
@@ -133,7 +133,7 @@ button:focus {
   box-shadow: 0 0 6px rgba(76, 175, 80, 0.5);
 }
 
-/* Добавим плавные анимации появления */
+/* Ajoutons des animations fluides d'apparence*/
 .fade-in {
   animation: fadeIn 0.6s ease forwards;
 }
