ajout des logos, correction des css pour Header
ajout des logos(emplacement correcte), correction des css pour  Header + amelioration d'etat visuel (UX)

--- a/frontend/unesco/src/assets/footer.css
+++ b/frontend/unesco/src/assets/footer.css
@@ -32,9 +32,12 @@ footer ul li:first-child {
 }
 
 footer img {
-  height: 60px;
+  height: 150px;
+  max-width: 100%;
   width: auto;
   transition: transform 0.3s ease;
+  opacity: 0.9;
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
 footer a:hover img {
