--- a/frontend/unesco/src/assets/header.css
+++ b/frontend/unesco/src/assets/header.css
@@ -1,6 +1,5 @@
 header {
   background-color: #fffffe;
-  padding: 1rem 2rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
@@ -14,13 +13,19 @@ header {
 }
 
 .logo img {
-  height: 50px;
+  margin-left: 5rem;
+  margin-top: -1.1rem;
+  margin-bottom: 0.5rem;
+  height: 100px;
+  max-width: 100%;
   width: auto;
-  transition: transform 0.3s ease;
+  transition: transform 0.4s ease;
+  opacity: 0.9;
+  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
 }
 
 .logo a:hover img {
-  transform: scale(1.05);
+  transform: scale(1.1);
 }
 
 nav ul {
@@ -28,7 +33,7 @@ nav ul {
   margin: 0;
   padding: 0;
   display: flex;
-  gap: 1rem;
+  gap: 4rem;
 }
 
 nav ul li {
@@ -40,7 +45,7 @@ nav ul li {
   color: #fffffe;
   background-color: #13245a;
   font-family: Arial, sans-serif;
-  font-size: 1rem;
+  font-size: 1.4rem;
   font-weight: 500;
   padding: 0.5rem 1.5rem;
   border-radius: 5px;
